# hardhat

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
src/: app.py  command_parser.py  coreminer_interface.py  data_store.py  feedback_parser.py  parse_command_logic.py
src/css/: help_menu.tcss  main_view.tcss  widget_selector.tcss
src/views/: help_menu.py  main_view.py  widget_selector.py
src/widgets/: backtrace.py  disassembly.py  display_response.py  output.py  raw_responses.py  registers.py  stack.py  widget_b.py  widget_c.py
tui/: app.py  coreminer_interface.py  styles.css
tui/css/: grid_view.css  main_view.css  widget_selector.css  widget_selector.tcss
tui/views/: grid_view.py  main_view.py  widget_selector.py
tui/widgets/: base_container.py  command_input.py  display_response.py  widget_a.py
